--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html, body {
   -ms-overflow-style: none; /* IE/Edge */
 }
 
-/* Estilos para PageWrapper */
+/* Estilos para PageSection */
 h1 {
   font-family: 'Poppins', sans-serif;
 }
