--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 html, body {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE/Edge */
+  background-color: #050C0F;
 }
 
 /* Estilos para PageSection */
